Fixed text alignment of admin login form

--- a/Client/src/assets/styles/forms.css
+++ b/Client/src/assets/styles/forms.css
@@ -56,7 +56,8 @@ label {
 .create-edit-recipe input,
 .login input,
 .register input,
-.profile input {
+.profile input,
+.a-login input {
     text-align: center;
 }
 
